2011-12-02 Carsten Haitzler (The Rasterman)

        1.1.0 release

2011-12-02 Carsten Haitzler (The Rasterman)

        * Add symlinks for *.dv, *.qt and *.rv video file formats

2012-03-18 Carsten Haitzler (The Rasterman)

        * Fix distcheck with highly parallel builds

2012-04-26 Carsten Haitzler (The Rasterman)

        1.2.0 release

2012-05-18  Cedric Bail

	* Make rsvg backend use the generic backend as it is our main
	source of crash in e17.

2012-05-06  Fanina Cristian

	* Add support for Poppler 0.20.